# gbcapacity

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
gbcapacity/: __init__.py  client.py  period.py
